# quant-harbor

./: .gitignore  README.md  pyproject.toml  setup.cfg
docs/: Backtest_Eval_Spec.md  HowTo_Run_and_Extend.md  IC_Scorecard_v1.md  ResearchProtocol.md
src/quant_harbor/: __init__.py  alpaca_data.py  analyzers.py  backtest_runner.py  basin.py  cli_backtest.py  cli_freezeA.py  cli_rsi2_backtest.py  cli_rsi2_backtest_split.py  cli_rsi2_basin.py  cli_rsi2_basin_wfa.py  cli_rsi2_freeze_wfa.py  cli_rsi2_gates.py  cli_rsi2_walk_forward.py  cli_scorecard.py  cli_wfa_retune.py  config.py  gates.py  metrics.py  regime.py  scorecard.py  sizers.py  split.py  stats.py  walk_forward.py
src/quant_harbor/dashboard/: app.py  tv_chart.py  utils.py
src/quant_harbor/strategies/: __init__.py  _bracket_mixin.py  bollinger_mr.py  ma_crossover.py  pairs_mr.py  registry.py  rsi2.py  st_daily_rsi2.py  supertrend.py  trend_pullback.py  vwap_mr.py  zscore_mr.py
tasks/: STATUS.md  TASKS.md
